--- a/Coursework_ML_4.ipynb
+++ b/Coursework_ML_4.ipynb
@@ -305,7 +305,7 @@
         "checkpoint_callback_weights = tf.keras.callbacks.ModelCheckpoint(\n",
         "    filepath=os.path.join(folder_id, \"weights_only_{epoch:02d}.hdf5\"),\n",
         "    save_weights_only=True,\n",
-        "    monitor=\"categorical_accuracy\",\n",
+        "    monitor=\"val_categorical_accuracy\",\n",
         "    save_best_only=True,\n",
         "    mode='max'\n",
         ")\n",
@@ -418,7 +418,7 @@
       "source": [
         "# Загрузка всей модели из чекпоинта c гугл диска\n",
         "\n",
-        "model = tf.keras.models.load_model(os.path.join(folder_id, \"model_checkpoint_16.hdf5\"))"
+        "model = tf.keras.models.load_model(os.path.join(folder_id, \"model_checkpoint_06.hdf5\"))"
       ],
       "metadata": {
         "id": "_LvNh-mNiUQv"
@@ -429,29 +429,42 @@
     {
       "cell_type": "code",
       "source": [
+        "# Загрузка весов из чекпоинта c гугл диска\n",
+        "\n",
+        "model.load_weights(os.path.join(folder_id, \"weights_only_06.hdf5\"))"
+      ],
+      "metadata": {
+        "id": "LVM3i38hBD76"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Обучаем модель\n",
         "\n",
-        "EPOCHS = 2\n",
+        "EPOCHS = 5\n",
         "model.fit(train_generator, steps_per_epoch=25,\n",
         "                              epochs=EPOCHS,\n",
         "                              validation_data=val_generator,\n",
-        "                              callbacks=[checkpoint_callback_full])"
+        "                              callbacks=[checkpoint_callback_full, checkpoint_callback_weights, reduce_lr])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qu45n4y9iULW",
-        "outputId": "f98433db-c57e-4fa9-fe10-e15be71048fa"
+        "outputId": "8457866a-364a-4a1a-eaf8-c1be9ee411b6"
       },
-      "execution_count": 17,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/2\n",
-            "25/25 [==============================] - ETA: 0s - loss: 1.3239 - categorical_accuracy: 0.5081"
+            "Epoch 1/10\n",
+            "25/25 [==============================] - ETA: 0s - loss: 1.3407 - categorical_accuracy: 0.5150"
           ]
         },
         {
@@ -466,20 +479,36 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r25/25 [==============================] - 355s 13s/step - loss: 1.3239 - categorical_accuracy: 0.5081 - val_loss: 1.5933 - val_categorical_accuracy: 0.4324\n",
-            "Epoch 2/2\n",
-            "25/25 [==============================] - 279s 12s/step - loss: 1.3473 - categorical_accuracy: 0.5013 - val_loss: 1.5231 - val_categorical_accuracy: 0.4551\n"
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r25/25 [==============================] - 304s 13s/step - loss: 1.3407 - categorical_accuracy: 0.5150 - val_loss: 1.5560 - val_categorical_accuracy: 0.4428 - lr: 0.0010\n",
+            "Epoch 2/10\n",
+            "25/25 [==============================] - 295s 12s/step - loss: 1.3883 - categorical_accuracy: 0.4831 - val_loss: 1.5484 - val_categorical_accuracy: 0.4467 - lr: 0.0010\n",
+            "Epoch 3/10\n",
+            "25/25 [==============================] - 273s 11s/step - loss: 1.3593 - categorical_accuracy: 0.5031 - val_loss: 1.5591 - val_categorical_accuracy: 0.4445 - lr: 0.0010\n",
+            "Epoch 4/10\n",
+            "25/25 [==============================] - 286s 12s/step - loss: 1.3215 - categorical_accuracy: 0.5213 - val_loss: 1.6650 - val_categorical_accuracy: 0.4086 - lr: 0.0010\n",
+            "Epoch 5/10\n",
+            "25/25 [==============================] - 281s 12s/step - loss: 1.3514 - categorical_accuracy: 0.5100 - val_loss: 1.4911 - val_categorical_accuracy: 0.4586 - lr: 1.0000e-04\n",
+            "Epoch 6/10\n",
+            "25/25 [==============================] - 292s 12s/step - loss: 1.2854 - categorical_accuracy: 0.5375 - val_loss: 1.4497 - val_categorical_accuracy: 0.4696 - lr: 1.0000e-04\n",
+            "Epoch 7/10\n",
+            "25/25 [==============================] - 272s 11s/step - loss: 1.3146 - categorical_accuracy: 0.5213 - val_loss: 1.4261 - val_categorical_accuracy: 0.4813 - lr: 1.0000e-04\n",
+            "Epoch 8/10\n",
+            "25/25 [==============================] - 273s 11s/step - loss: 1.3064 - categorical_accuracy: 0.5350 - val_loss: 1.4166 - val_categorical_accuracy: 0.4898 - lr: 1.0000e-04\n",
+            "Epoch 9/10\n",
+            "25/25 [==============================] - 276s 11s/step - loss: 1.2985 - categorical_accuracy: 0.5256 - val_loss: 1.4164 - val_categorical_accuracy: 0.4920 - lr: 1.0000e-04\n",
+            "Epoch 10/10\n",
+            "25/25 [==============================] - 274s 11s/step - loss: 1.2975 - categorical_accuracy: 0.5200 - val_loss: 1.4158 - val_categorical_accuracy: 0.4885 - lr: 1.0000e-04\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7ec943067550>"
+              "<keras.src.callbacks.History at 0x7ec941d17340>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 27
         }
       ]
     },
@@ -575,15 +604,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0UXE7rCTqGwd",
-        "outputId": "a64842cc-f844-4434-db1b-ad066b6309ef"
+        "outputId": "82c5e92c-a1ef-4c68-c7e5-533bb253b424"
       },
-      "execution_count": 24,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "79/79 [==============================] - 83s 1s/step\n"
+            "79/79 [==============================] - 82s 1s/step\n"
           ]
         }
       ]
@@ -600,13 +629,23 @@
         "\n",
         "# Заменяем изначальные данные предсказанными классами\n",
         "\n",
+        "test_df = pd.read_csv(\"/content/drive/My Drive/Skillbox/sample_submission.csv\")\n",
         "test_df['emotion'] = y_pred\n",
         "test_df['emotion'] = test_df['emotion'].replace(em_dick)"
       ],
       "metadata": {
         "id": "ta-VPqrVqGt7"
       },
-      "execution_count": 25,
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GTYiRcUAEXXa"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -619,7 +658,7 @@
       "metadata": {
         "id": "e7m4_MqyqGrl"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     }
   ]
